--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package name="com.leon.wcf.togglebuttonlist" xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/package.xsd">
 	<packageinformation>
-		<packagename><![CDATA[Toggle List]]></packagename>
+		<packagename><![CDATA[Toggle Button List]]></packagename>
 		<packageurl><![CDATA[https://github.com/Leon-/com.leon.wcf.togglebuttonlist]]></packageurl>
 		<version>1.0.0</version>
 		<date>2012-05-07</date>
